# facing-time

./: .gitignore  .gitmodules  CLAUDE.md  README.md  build_rust_core.sh  debug_start.sh  project.yml  setup.sh
.claude/: settings.local.json
.github/workflows/: gdscript.yml  pr-check.yml  rust.yml
GameRule/: 阿瓦隆.md
GodotProject/: .gutconfig.json  check_all_scripts.gd.uid  export_presets.cfg  icon.svg.import  project.godot
GodotProject/font/: SourceHanSansCN-VF.ttf.import  SourceHanSansSC-VF.otf.import
GodotProject/game/core/: game_config.gd  game_config.gd.uid  game_enums.gd  game_enums.gd.uid  game_manager.gd  game_manager.gd.uid  player.gd  player.gd.uid
GodotProject/game/models/: PlayerData.gd  PlayerData.gd.uid  RoomData.gd  RoomData.gd.uid  SeatData.gd  SeatData.gd.uid
GodotProject/game/network/: NetworkMessage.gd  NetworkMessage.gd.uid  WebSocketNetwork.gd  WebSocketNetwork.gd.uid  (+4 more)
GodotProject/gdextension/: facingtime.gdextension  facingtime.gdextension.uid
GodotProject/tests/: run_tests.gd  run_tests.gd.uid
Resources/: Info.plist  chat.html
RustCore/: Cargo.toml  README.md
RustCore/examples/: http_server.rs  mdns_server.rs
RustCore/examples/static/: index.html
RustCore/examples/web/: index.html
RustCore/src/: error.rs  godot_server.rs  lib.rs  types.rs
RustCore/src/ffi/: mdns.rs  mod.rs  server.rs
RustCore/src/server/: http_server.rs  mdns_server.rs  mod.rs  router.rs
RustCore/tests/: http_server_test.rs  mdns_server_test.rs
Sources/App/: AppState.swift  FacingTimeApp.swift
Sources/Core/: HttpServer.swift  StaticContent.swift
Sources/RustCore/: Cargo.toml  build.sh
Sources/RustCore/src/: lib.rs
Sources/Services/: Logger.swift  NetworkService.swift
Sources/Views/: ContentView.swift  DebugLogView.swift  DeviceDiscoveryView.swift  ServerView.swift  SettingsView.swift
docs/: designe.md
docs/plans/: 2026-02-18-game-room-mvvm-design.md  2026-02-18-godot-directory-refactor.md  2026-02-23-network-test-design.md  2026-02-23-network-test-impl.md
scripts/: build_rust_core.sh  download_gut.sh  generate_tls_certificates.sh
(+29 files in other folders)
