[package]
name = "facingtime-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
# Core godot dependency (all platforms)
[dependencies.godot]
git = "https://github.com/godot-rust/gdext"
branch = "master"
features = ["register-docs"]

# Native-only dependencies (exclude wasm32)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
bytes = "1.0"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
parking_lot = "0.12"

# Web framework
axum = { version = "0.8", features = ["ws"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["fs", "compression-full", "add-extension"] }
http = "1.0"
hyper = "1.0"
hyper-util = { version = "0.1", features = ["client", "server", "tokio"] }

# TLS/HTTPS support
rustls = { version = "0.23", default-features = false, features = ["ring"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "logging", "tls12"] }
rcgen = "0.14.0"
time = "0.3"
pem = "3.0"
rustls-pemfile = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0.18"

# mDNS
mdns-sd = "0.18.0"

[build-dependencies]
prost-build = "0.14.3"

[[example]]
name = "mdns_server"
path = "examples/mdns_server.rs"
