[package]
name = "facingtime-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
bytes = "1.0"
regex = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
parking_lot = "0.12"

[target.'cfg(target_arch = "aarch64")'.dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
